# orbiteus

./: .env.example  .env.local.example  .env.shipping.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  README.md  THIRD_PARTY_LICENSES.node.json  THIRD_PARTY_LICENSES.python.json  conftest.py  docker-compose.demo.yml  docker-compose.prod.yml  docker-compose.vm-ports.yml  docker-compose.yml  package-lock.json  package.json
admin-ui/: Dockerfile  Dockerfile.prod  next.config.js  package.json  (+3 more)
backend/: .env.example  Dockerfile  Dockerfile.prod  api.py  celery_app.py  entrypoint-migrate.sh  entrypoint.sh  pyproject.toml
backend/migrations/versions/: a1f3c0e1b002_audit_log_and_attribution.py  b2a4e1c0d003_outbox_and_webhooks.py  c3b5d2e1c004_ai_credentials_and_embeddings.py  d4c0a1f2e005_canonical_crm.py  e5f1a2b3c006_recovery_codes.py  f6a1b2c3d007_webhook_filters_and_auth.py  g7b2c3d4e008_crm_pipedrive_extensions.py  h8c3d4e5f009_crm_automation_rules.py  h8d4e5f6a009_crm_lifecycle_attribution.py  i9e5f6a7b010_crm_queues.py  j0a1b2c3d011_crm_stage_blueprint.py  k1b2c3d4e012_crm_email_log.py  l2c3d4e5f013_crm_lead_score.py  m3g8b9c0d014_shipping_ifs_shipment_queue.py  n4h5i6j7k015_shipping_dispatch_kiosk.py  o5i6j7k8l016_inventory_wms_foundation.py
backend/modules/auth/: actions.py
backend/modules/auth/controller/: router.py
backend/modules/auth/docs/: spec.md
backend/modules/base/: actions.py
backend/modules/base/controller/: router.py
backend/modules/base/docs/: spec.md
backend/modules/base/model/: domain.py  mapping.py
backend/modules/base/view/: config.py
backend/modules/crm/: actions.py  ai.py  bootstrap.py  domain.py  manifest.py  mapping.py  repositories.py  schemas.py  security.py  services.py
backend/modules/crm/controller/: automation.py  csv_io.py  forecast.py  queue_filter.py  repositories.py  router.py  scoring.py  security.py  services.py
backend/modules/crm/docs/: spec.md
backend/modules/crm/model/: domain.py  mapping.py  schemas.py
backend/modules/crm/security/: access.yaml
backend/modules/crm/view/: activity_views.xml  config.py  lead_views.xml  organization_views.xml  person_views.xml  pipeline_views.xml  prospect_views.xml  queue_views.xml  stage_views.xml
backend/modules/hr/docs/: spec.md
backend/modules/inventory/: __init__.py  bootstrap.py  manifest.py
backend/modules/inventory/controller/: location_services.py  repositories.py  router.py
backend/modules/inventory/docs/: README.md  spec.md  tasks.md
backend/modules/inventory/model/: domain.py  mapping.py  schemas.py
backend/modules/inventory/security/: access.yaml
backend/modules/inventory/view/: config.py  location_views.xml  product_views.xml  quant_views.xml  warehouse_views.xml
backend/modules/project/docs/: spec.md
backend/modules/shipping/: __init__.py  actions.py  ai.py  bootstrap.py  manifest.py
backend/modules/shipping/controller/: compose_preview.py  ifs_webhook_router.py  kiosk_services.py  repositories.py  router.py  services.py
backend/modules/shipping/docs/: README.md  carrier-labels.md  pallet-mix-swift-composer-port.md  spec.md  tasks.md  ux-kiosk.md  wms-audit.md
backend/modules/shipping/lib/: carrier_registry.py  carrier_settings.py  cf_handling_units_parser.py  coerce_ifs_payload.py  ifs_dispatch_profiles.py  ifs_inbound_adapter.py  ifs_inbound_mapper.py  ifs_logistics_types.py  ifs_mapper.py  ifs_packaging.py  routing.py  shipment_types.py
backend/modules/shipping/lib/adapters/: dpd_adapter.py  dsv_adapter.py  errors.py  geodis_adapter.py  mercato_hub.py  mock.py
backend/modules/shipping/lib/adapters/dpd/: __init__.py  auth.py  client.py  config.py  soap_labels.py
backend/modules/shipping/lib/adapters/dsv/: __init__.py  client.py  config.py  locations.py  pickup_date.py  types.py
backend/modules/shipping/lib/adapters/geodis/: __init__.py  client.py  pickup_date.py  types.py
backend/modules/shipping/model/: domain.py  mapping.py  schemas.py
backend/modules/shipping/security/: access.yaml
backend/modules/shipping/view/: config.py  ifs_queue_views.xml  shipment_views.xml
backend/modules/social/docs/: spec.md
backend/orbiteus_core/: alembic_lock.py  audit.py  auto_router.py  base_domain.py  cache.py  config.py  context.py  db.py  events.py  health.py  mail.py  mapper.py  outbox.py  outbox_dispatcher.py  portal_router.py  realtime.py  realtime_router.py  registry.py  repository.py  sharing.py  ui_config.py
backend/orbiteus_core/ai/: action.py  budget.py  config.py  dispatcher.py  keys.py  redaction.py  router.py  tools.py
backend/orbiteus_core/ai/providers/: __init__.py  anthropic.py  base.py  ollama.py  openai.py
backend/orbiteus_core/docs/: spec.md
backend/orbiteus_core/integrations/: __init__.py  system_context.py
backend/orbiteus_core/observability/: __init__.py  logging.py  metrics.py  middleware.py  tracing.py
backend/orbiteus_core/ports/: __init__.py  ifs_inbound.py  mailbox.py  telephony.py
backend/orbiteus_core/security/: cookies.py  jti.py  middleware.py  rate_limit.py  rate_limit_middleware.py  rbac.py  recovery_codes.py  tokens.py
backend/scripts/: diag_list.py  dpd_orbiteus_smoke.py  repair_missing_tables.py  seed_crm_practice.py  shipping_carrier_matrix_smoke.py
backend/tasks/: __init__.py  outbox_tasks.py  shipping_tasks.py  webhook_tasks.py
backend/tests/: conftest.py  test_auth.py  test_crm_automation.py  test_crm_blueprint.py  test_crm_csv.py  test_crm_email.py  test_crm_forecast.py  test_crm_lifecycle.py  test_crm_pipedrive_extensions.py  test_crm_queues.py  test_crm_scoring.py  test_dpd_native.py  test_endpoint_coverage.py  test_ifs_cf_parser.py  test_ifs_outbox_dispatch.py  test_ifs_webhook_integration.py  test_ifs_webhook_route.py  test_inventory_foundation.py  test_inventory_location_tree.py  test_phase1_phase2.py  test_rbac.py  test_recovery_codes.py  test_registry.py  test_shipping_carrier_matrix.py  test_shipping_compose_preview.py  test_shipping_dispatch_workspace.py
backend/tests/fixtures/: ifs_shipment_webhook.json
(+306 files in other folders)
