[project]
name = "orbiteus"
version = "1.0.0"
license = { text = "MIT" }
requires-python = ">=3.13"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",
    "gunicorn>=23.0.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.29.0",
    "alembic>=1.13.0",
    "pydantic[email]>=2.7.0",
    "pydantic-settings>=2.3.0",
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",
    "python-multipart>=0.0.9",
    "redis>=5.0.0",
    "prometheus-client>=0.20.0",
    "celery>=5.4.0",
    "cryptography>=42.0.0",
    "anthropic>=0.34.0",
    "openai>=1.40.0",
    "pgvector>=0.3.0",
    "opentelemetry-api>=1.27.0",
    "opentelemetry-sdk>=1.27.0",
    "opentelemetry-exporter-otlp-proto-http>=1.27.0",
    "opentelemetry-instrumentation-fastapi>=0.48b0",
    "opentelemetry-instrumentation-sqlalchemy>=0.48b0",
    "opentelemetry-instrumentation-redis>=0.48b0",
    "opentelemetry-instrumentation-httpx>=0.48b0",
    "lagom>=2.7.0",
    "pyotp>=2.9.0",
    "jinja2>=3.1.0",
    "httpx>=0.27.0",
    "greenlet>=3.0.0",
    "pyyaml>=6.0",
    "lxml>=5.0",
    "rapidfuzz>=3.0",
    "aiosmtplib>=3.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "pytest-cov>=5.0.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.urls]
Homepage = "https://orbiteus.com"
Repository = "https://github.com/orbiteus/orbiteus"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["orbiteus_core", "modules"]

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "session"
asyncio_default_test_loop_scope = "session"
testpaths = ["tests"]


# ---------------------------------------------------------------------------
# Coverage (DoD §15.1)
# ---------------------------------------------------------------------------
#
# Most of the suite is integration-style: tests talk HTTP to a backend
# running inside docker-compose, so the kernel that actually exercises
# the framework code is in another process. The host-side
# `pytest --cov` therefore *under-reports* — useful as a relative
# signal, but the absolute number won't match the in-container
# measurement.
#
# We deliberately do NOT enforce a `fail_under = 80` threshold here.
# The honest baseline today (host-side) is ~31% for `orbiteus_core`
# and the in-container measurement is the canonical one. Hard-coding
# a threshold against the host-side number would drive teams to
# game it instead of writing real coverage.
#
# To produce a useful report:
#
#     pytest -q --cov=backend/orbiteus_core --cov=backend/modules \
#                --cov-report=term-missing --cov-report=xml
#
# CI consumes `coverage.xml`; the human-readable summary is the
# `term-missing` table.

[tool.coverage.run]
source = ["backend/orbiteus_core", "backend/modules"]
branch = true
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__init__.py",
]

[tool.coverage.report]
show_missing = true
skip_empty = true
precision = 1
exclude_lines = [
    "pragma: no cover",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
